--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,17 +14,13 @@
     },
     "import/resolver": {
       "node": {
-        "paths": [
-          "src"
-        ],
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
+  },
+  "globals": {
+    "process": true
   },
   "rules": {
     "no-unused-vars": [
