--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,21 +1,25 @@
 version: '3'
 services:
-  # postgres:
-  #   image: postgres:14-alpine
-  #   build:
-  #     context: .
-  #   volumes:
-  #     - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-  #   environment:
-  #     POSTGRES_USER: main-panel_test
-  #     POSTGRES_PASSWORD: main-panel_test
-  #     POSTGRES_DB: main-panel_test
-  #   ports:
-  #     - '5432:5432' # Puerto de PostgreSQL fijo
-  #   # entrypoint: ['./init.sh', 'postgres']
+  postgres_db:
+    image: postgres:14-alpine
+    container_name: postgres_db
+    restart: always
+    volumes:
+      - postgres_db:/var/lib/postgresql/data
+    environment:
+      - 'POSTGRES_USER=${POSTGRES_USER}'
+      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
+      - 'POSTGRES_DB=${POSTGRES_DB}'
+    ports:
+      - '$POSTGRES_PORT:$POSTGRES_PORT'
+    # entrypoint: ['./init.sh', 'postgres']
+    networks:
+      - my-docker-network
 
   backend_app:
     container_name: ADMINISTRATION_SERVER
+    depends_on:
+      - postgres_db
     build:
       context: ./
       dockerfile: Dockerfile
@@ -24,8 +28,12 @@ services:
     ports:
       - '$SERVER_PORT:$SERVER_PORT'
     networks:
-      - mynetwork
+      - my-docker-network
+
+volumes:
+  postgres_db:
+    name: postgres_db
 
 networks:
-  mynetwork:
+  my-docker-network:
     driver: bridge
